Added phone number

--- a/vijay.html
+++ b/vijay.html
@@ -7,3 +7,4 @@
     One of my favourite actor.Joseph Vijay Chandrasekhar (born 22 June 1974), known professionally as Vijay, is an Indian actor and politician who works in Tamil cinema.
 
 </p>
+<p>Contact: 3565676769</p>
